@@ -52,6 +52,9 @@ void init_type_altar(void)
 static method_ret altar_type_move_on(ob_methods* context, object* trap, object* victim,
     object* originator)
 {
+    if (trap->head)
+        trap = trap->head;
+
     if (common_pre_ob_move_on(trap, victim, originator)==METHOD_ERROR)
         return METHOD_OK;
 
