@@ -51,6 +51,9 @@ void init_type_trigger_altar(void)
 static method_ret trigger_altar_type_move_on(ob_methods* context, object* trap,
     object* victim, object* originator)
 {
+    if (trap->head)
+        trap = trap->head;
+
     if (common_pre_ob_move_on(trap, victim, originator)==METHOD_ERROR)
         return METHOD_OK;
     check_trigger(trap, victim);
